--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
 					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Home</a>
+						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Contact Me</a>
 					</p>
 				</div>
 			</div>
@@ -92,6 +92,11 @@
 					</div>
 					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+
+					<p>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Home</a>
+						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Contact Me</a>
+					</p>
 
 				</div>
 			</div>
