--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Cristian Torres</strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">Market Research, Analytics.</strong>
+					<strong class="d-block text-white text-uppercase letter-spacing">Market Research, Advanced Analytics & Insights.</strong>
 
 				</div>
 			</div>
@@ -70,8 +70,8 @@
 					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
 					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Home</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Contact Me</a>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
+						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Home</a>
 					</p>
 				</div>
 			</div>
@@ -94,8 +94,8 @@
 					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
 					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Home</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Contact Me</a>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
+						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Home</a>
 					</p>
 
 				</div>
@@ -127,7 +127,7 @@
 						</span>
 						<h3 class="mb-4">Market Research: Cuali, Cuanti & Neuromarketing</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#" class="site-link">Contact Me <i class="btn btn-primary px-4 py-2 btn-sm smoothscroll"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
@@ -137,7 +137,7 @@
 						</span>
 						<h3 class="mb-4">Big Data, Data Visualization</h3>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#" class="site-link">Contact Me <i class="btn btn-primary px-4 py-2 btn-sm smoothscroll"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
@@ -147,7 +147,7 @@
 						</span>
 						<h3 class="mb-4">Digital Marketing, Google Analytics</h3>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#" class="site-link">Contact Me <i class="btn btn-primary px-4 py-2 btn-sm smoothscroll"></i></a></p>
 					</div>
 				</div>
 
@@ -249,13 +249,6 @@
 						<span class="school">Escuela Superior Politécnica del Litotal ESPOL</span>
 					</div>
 
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
 				</div>
 				<div class="col-md-6">
 
@@ -283,14 +276,6 @@
 						<span class="school">Carat Ecuador - Dentsu Aegis Network</span>
 					</div>
 
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">Shopify</span>
-					</div>
-
-
 				</div>
 			</div>
 		</div>
@@ -307,16 +292,16 @@
 			<div class="filters">
 				<ul>
 					<li class="active" data-filter="*">All</li>
-					<li data-filter=".packaging">Packaging</li>
-					<li data-filter=".mockup">Mockup</li>
-					<li data-filter=".typography">Typography</li>
-					<li data-filter=".photography">Photography</li>
+					<li data-filter=".advertising">Advertising</li>
+					<li data-filter=".marketresearch">Market Research</li>
+					<li data-filter=".ecuador">Ecuador</li>
+					<li data-filter=".football">Football</li>
 				</ul>
 			</div>
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-portfolio col-sm-4 all mockup">
+					<div class="single-portfolio col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -330,10 +315,10 @@
 						</div>
 						<div class="p-inner">
 							<h4>Square Box Mockup</h4>
-							<div class="cat">Mockup</div>
+							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>
-					<div class="single-portfolio col-sm-4 all mockup">
+					<div class="single-portfolio col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -347,10 +332,10 @@
 						</div>
 						<div class="p-inner">
 							<h4>Product Box Package Mockup</h4>
-							<div class="cat">Mockup</div>
+							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>                            
-					<div class="single-portfolio col-sm-4 all packaging">
+					<div class="single-portfolio col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -365,10 +350,10 @@
 						</div>
 						<div class="p-inner">
 							<h4>Creative Package Design</h4>
-							<div class="cat">Packaging</div>
+							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all packaging">
+					<div class="single-portfolio col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -382,10 +367,10 @@
 						</div> 
 						<div class="p-inner">
 							<h4>Packaging Brand</h4>
-							<div class="cat">Packaging</div>
+							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all typography">
+					<div class="single-portfolio col-sm-4 all ecuador">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -399,10 +384,10 @@
 						</div>
 						<div class="p-inner">
 							<h4>Isometric 3D Extrusion</h4>
-							<div class="cat">Typography</div>
+							<div class="cat">Ecuador</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all photography">
+					<div class="single-portfolio col-sm-4 all football">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -416,7 +401,7 @@
 						</div>
 						<div class="p-inner">
 							<h4>White Space Photography</h4>
-							<div class="cat">photography</div>
+							<div class="cat">Football</div>
 						</div>
 					</div>
 				</div>
