--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Visualizations</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-books">Books</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
 				</ul>
 			</div>
@@ -104,8 +105,6 @@
 
 		</div>
 	</section>
-
-
 
 
 	<section class="site-section pb-0"  id="section-services">
@@ -216,7 +215,7 @@
 
 			</div>
 		</div>
-	</section>
+	</section> <!-- section -->
 
 	<section class="site-section " id="section-resume">
 		<div class="container">
@@ -407,9 +406,69 @@
 				</div>
 			</div>
 		</div>
-	</section>
-	<!-- .section -->
+	</section> <!-- .section -->
+	
+	<section class="site-section" id="section-books">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 mb-5">
+					<div class="section-heading text-center">
+						<h2>Book <strong>Recommendations</strong></h2>
+					</div>
+				</div>
+			</div>
 
+			<div class="row">
+				<div class="col-sm-6 col-lg-4 mb-4">
+					<div class="blog-entry">
+						<a href="#"><img src="images/post_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<div class="blog-entry-text">
+							<h3><a href="#">Book Recommendations 2019</a></h3>
+							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+
+							<div class="meta">
+								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
+								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-lg-4 mb-4">
+					<div class="blog-entry">
+						<a href="#"><img src="images/post_2.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<div class="blog-entry-text">
+							<h3><a href="#">Book Recommendations 2020</a></h3>
+							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+
+							<div class="meta">
+								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
+								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-lg-4 mb-4">
+					<div class="blog-entry">
+						<a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<div class="blog-entry-text">
+							<h3><a href="#">Book Recommendations 2021</a></h3>
+							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+
+							<div class="meta">
+								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
+								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section> <!-- section -->
+	
+	
 	<section class="site-section" id="section-contact">
 		<div class="container">
 			<div class="row">
