--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Visualizations</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-visualizations">Visualizations</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-books">Books</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
 				</ul>
@@ -281,7 +281,7 @@
 	</section> <!-- .section -->
 
 
-	<section class="site-section" id="section-portfolio">
+	<section class="site-section" id="section-visualizations">
 		<div class="container">
 			<div class="row">
 				<div class="section-heading text-center col-md-12">
@@ -294,13 +294,13 @@
 					<li data-filter=".advertising">Advertising</li>
 					<li data-filter=".marketresearch">Market Research</li>
 					<li data-filter=".ecuador">Ecuador</li>
-					<li data-filter=".football">Football</li>
+					<li data-filter=".footballanalytics">Football Analytics</li>
 				</ul>
 			</div>
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-portfolio col-sm-4 all marketresearch">
+					<div class="single-visualizations col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -317,7 +317,7 @@
 							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>
-					<div class="single-portfolio col-sm-4 all marketresearch">
+					<div class="single-visualizations col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -334,7 +334,7 @@
 							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>                            
-					<div class="single-portfolio col-sm-4 all advertising">
+					<div class="single-visualizations col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -352,7 +352,7 @@
 							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all advertising">
+					<div class="single-visualizations col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -369,7 +369,7 @@
 							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all ecuador">
+					<div class="single-visualizations col-sm-4 all ecuador">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -386,7 +386,7 @@
 							<div class="cat">Ecuador</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all football">
+					<div class="single-visualizations col-sm-4 all footballanalytics">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -427,8 +427,8 @@
 							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
 
 							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+								<a href="#"><span class="icon-calendar"></span> Dec 31, 2019</a>
+								<a href="#"><span class="icon-bubble"></span> 1 Comments</a>
 							</div>
 						</div>
 					</div>
@@ -442,8 +442,8 @@
 							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
 
 							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+								<a href="#"><span class="icon-calendar"></span> Dec 31, 2020</a>
+								<a href="#"><span class="icon-bubble"></span> 2 Comments</a>
 							</div>
 						</div>
 					</div>
@@ -457,8 +457,8 @@
 							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
 
 							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+								<a href="#"><span class="icon-calendar"></span> May 2, 2021</a>
+								<a href="#"><span class="icon-bubble"></span> 0 Comments</a>
 							</div>
 						</div>
 					</div>
