--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 						</div>
 						<div class="p-inner">
 							<h4>White Space Photography</h4>
-							<div class="cat">Football</div>
+							<div class="cat">Football Analytics</div>
 						</div>
 					</div>
 				</div>
