--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-visualizations col-sm-4 all marketresearch">
+					<div class="single-portfolio col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -317,7 +317,7 @@
 							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>
-					<div class="single-visualizations col-sm-4 all marketresearch">
+					<div class="single-portfolio col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -334,7 +334,7 @@
 							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>                            
-					<div class="single-visualizations col-sm-4 all advertising">
+					<div class="single-portfolio col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -352,7 +352,7 @@
 							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-visualizations col-sm-4 all advertising">
+					<div class="single-portfolio col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -369,7 +369,7 @@
 							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-visualizations col-sm-4 all ecuador">
+					<div class="single-portfolio col-sm-4 all ecuador">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -386,7 +386,7 @@
 							<div class="cat">Ecuador</div>
 						</div>
 					</div>
-					<div class="single-visualizations col-sm-4 all footballanalytics">
+					<div class="single-portfolio col-sm-4 all footballanalytics">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
