--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						</span>
 						<h3 class="mb-4">Market Research: Cuali, Cuanti & Neuromarketing</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#" class="site-link">Contact Me <i class="btn btn-primary px-4 py-2 btn-sm smoothscroll"></i></a></p>
+						<p><a href="#" class="site-link">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
@@ -300,7 +300,7 @@
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-portfolio col-sm-4 all marketresearch">
+					<div class="single-visualizations col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -317,7 +317,7 @@
 							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>
-					<div class="single-portfolio col-sm-4 all marketresearch">
+					<div class="single-visualizations col-sm-4 all marketresearch">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -334,7 +334,7 @@
 							<div class="cat">Market Research</div>
 						</div>                                         
 					</div>                            
-					<div class="single-portfolio col-sm-4 all advertising">
+					<div class="single-visualizations col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -352,7 +352,7 @@
 							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all advertising">
+					<div class="single-visualizations col-sm-4 all advertising">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -369,7 +369,7 @@
 							<div class="cat">Advertising</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all ecuador">
+					<div class="single-visualizations col-sm-4 all ecuador">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -386,7 +386,7 @@
 							<div class="cat">Ecuador</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all footballanalytics">
+					<div class="single-visualizations col-sm-4 all footballanalytics">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
