--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Home</a>
+						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm smoothscroll">Home</a>
 					</p>
 				</div>
 			</div>
