--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						</span>
 						<h3 class="mb-4">Big Data, Data Visualization</h3>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-						<p><a href="#section-contact" class="site-link">Contact Me <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#section-contact" class="site-link" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
@@ -146,7 +146,7 @@
 						</span>
 						<h3 class="mb-4">Digital Marketing, Google Analytics</h3>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						<p><a href="#section-contact" class="site-link">Contact Me <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#section-contact" class="site-link" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 
