--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						</span>
 						<h3 class="mb-4">Market Research: Cuali, Cuanti & Neuromarketing</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#section-contact" class="site-link" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#section-contact" class="site-link" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me <i class="icon-chevron-right smoothscroll"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
