--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						</span>
 						<h3 class="mb-4">Market Research: Cuali, Cuanti & Neuromarketing</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#section-contact" class="site-link" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
@@ -136,7 +136,7 @@
 						</span>
 						<h3 class="mb-4">Big Data, Data Visualization</h3>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-						<p><a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#section-contact" class="site-link" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
