--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						</span>
 						<h3 class="mb-4">Digital Marketing, Digital Analytics</h3>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						<p><a href="#section-contact" class="site-link" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
+						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 
