--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 						<a href="https://github.com/Cristian-Torres" class="social-item"><span class="icon-github2"></span></a>
 						<a href="#" class="social-item"><span class="icon-wordpress"></span></a>
 						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item"><span class="icon-behance"></span></a>
+						<a href="https://www.instagram.com/cristian_torres/" class="social-item"><span class="icon-instagram"></span></a>
 					</p>
 				</div>
 			</div>
