--- a/index.html
+++ b/index.html
@@ -533,12 +533,10 @@
 						<a href="https://www.linkedin.com/in/cristian-torres-reyes/" class="social-item"><span class="icon-linkedin2"></span></a>
 						<a href="https://github.com/Cristian-Torres" class="social-item"><span class="icon-github2"></span></a>
 						<a href="#" class="social-item"><span class="icon-wordpress"></span></a>
+						<a href="https://public.tableau.com/profile/cristian.torres.reyes#!/" class="social-item"><span class="icon-piechart"></span></a>
 						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item"><span class="icon-piechart"></span></a>
-						<a href="#" class="social-item"><span class="icon-bargraph"></span></a>
-						<a href="#" class="social-item"><span class="icon-scatterplot"></span></a>
-						<a href="#" class="social-item"><span class="icon-visualization"></span></a>
-						<a href="#" class="social-item"><span class="icon-infographic"></span></a>
+						<a href="#" class="social-item"><span class="icon-books"></span></a>
+						<a href="#" class="social-item"><span class="icon-book"></span></a>
 						<a href="https://www.instagram.com/cristian_torres/" class="social-item"><span class="icon-instagram2"></span></a>
 					</p>
 				</div>
