--- a/index.html
+++ b/index.html
@@ -536,7 +536,9 @@
 						<a href="https://public.tableau.com/profile/cristian.torres.reyes#!/" class="social-item"><span class="icon-piechart"></span></a>
 						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
 						<a href="#" class="social-item"><span class="icon-books"></span></a>
-						<a href="#" class="social-item"><span class="icon-book"></span></a>
+						<a href="#" class="social-item"><span class="icon-books2"></span></a>
+						<a href="#" class="social-item"><span class="icon-book2"></span></a>
+						<a href="#" class="social-item"><span class="icon-book1"></span></a>
 						<a href="https://www.instagram.com/cristian_torres/" class="social-item"><span class="icon-instagram2"></span></a>
 					</p>
 				</div>
