--- a/index.html
+++ b/index.html
@@ -538,6 +538,8 @@
 						<a href="https://www.goodreads.com/user/show/86767541-cristian-torres" class="social-item"><span class="icon-books"></span></a>
 						<a href="https://open.spotify.com/user/ec.cristian.torres" class="social-item"><span class="icon-spotify"></span></a>
 						<a href="#" class="social-item"><span class="icon-spotify2"></span></a>
+						<a href="#" class="social-item"><span class="icon-spotify1"></span></a>
+						<a href="#" class="social-item"><span class="icon-spotify3"></span></a>
 						<a href="https://www.instagram.com/cristian_torres/" class="social-item"><span class="icon-instagram2"></span></a>
 					</p>
 				</div>
