--- a/index.html
+++ b/index.html
@@ -536,10 +536,7 @@
 						<a href="https://public.tableau.com/profile/cristian.torres.reyes#!/" class="social-item"><span class="icon-piechart"></span></a>
 						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
 						<a href="https://www.goodreads.com/user/show/86767541-cristian-torres" class="social-item"><span class="icon-books"></span></a>
-						<a href="https://open.spotify.com/user/ec.cristian.torres" class="social-item"><span class="icon-spotify"></span></a>
-						<a href="#" class="social-item"><span class="icon-spotify2"></span></a>
-						<a href="#" class="social-item"><span class="icon-spotify1"></span></a>
-						<a href="#" class="social-item"><span class="icon-spotify3"></span></a>
+						<a href="https://open.spotify.com/user/ec.cristian.torres" class="social-item"><span class="icon-spotify2"></span></a>
 						<a href="https://www.instagram.com/cristian_torres/" class="social-item"><span class="icon-instagram2"></span></a>
 					</p>
 				</div>
