--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 					<div class="section-heading">
 						<h2>About <strong>Me</strong></h2>
 					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+					<p class="lead">I am passionate about everything that mixes technology, data, and people, and turning large data volumes into knowledge, to find business-oriented and actionable insights in a fast-changing world we are living in.</p>
+					<p class="mb-5  ">Soy un apasionado de todo lo que relacione a la tecnología, con los datos y las personas, y convertir grandes volúmenes de datos en conocimiento, en busca de insights orientados al negocio.</p>
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
@@ -91,7 +91,7 @@
 					<div class="section-heading">
 						<h2>My <strong>Hobbies</strong></h2>
 					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<p class="lead">I like outdoor activities like running and cycling, and ocasionally participating in half marathons. I like to spend time with my family and traveling around the world (and obviously eating). I enjoy reading books (scroll down to find my book recommendations) and binge watching tv series. I am an enthusiast of football metrics/analytics and visualizations, especially from my football team Barcelona S.C.</p>
 					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
 					<p>
