--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 					<div class="section-heading">
 						<h2>My <strong>Hobbies</strong></h2>
 					</div>
-					<p class="lead">I like outdoor activities like running and cycling, and ocasionally participating in half marathons. I like to spend time with my family and traveling around the world (and obviously eating). I enjoy reading books (scroll down to find my book recommendations) and binge watching tv series. I am an enthusiast of football metrics/analytics and visualizations, especially from my football team Barcelona S.C.</p>
-					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+					<p class="lead">I love outdoor activities like running and cycling, and ocasionally participating in half marathons. I like to spend time with my family and traveling around the world (and obviously eating). I enjoy reading books (scroll down to find my book recommendations) and binge-watching tv series. I am an enthusiast of football metrics/analytics and visualizations, especially from my football team Barcelona S.C.</p>
+					<p class="mb-5  ">Me gustan las actividades al aire libre como correr y andar en bicicleta, y ocasionalmente participar en medio maratones. Me gusta pasar tiempo con mi familia y viajar por el mundo (y obviamente comer). Disfruto mucho leyendo libros (más abajo podrás encontrar mis recomendaciones) y ver series de tv. Soy un entusiasta de las métricas y visualizaciones de fútbol, en especial de mi equipo Barcelona S.C.</p>
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
