--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 					<div class="section-heading">
 						<h2>My <strong>Hobbies</strong></h2>
 					</div>
-					<p class="lead">I love outdoor activities like running, and participating in half marathons. I like to spend time with my family and traveling around the world. I enjoy reading books and binge-watching tv series. I am an enthusiast of football metrics/analytics and visualizations, especially from my football team Barcelona S.C.</p>
-					<p class="mb-5  ">Me gustan las actividades al aire libre como correr, y participar en medio maratones. Me gusta pasar tiempo con mi familia y viajar por el mundo. Disfruto leyendo libros y ver series de tv. Soy un entusiasta de las métricas y visualizaciones de fútbol, en especial de mi equipo Barcelona S.C.</p>
+					<p class="lead">I like running and participating in half marathons. I enjoy spending time with my family and traveling around the world. I like reading books and binge-watching tv series. I am an enthusiast of football analytics and visualizations, especially from my football team Barcelona S.C.</p>
+					<p class="mb-5  ">Me gusta correr y participar en medio maratones. Disfruto pasar tiempo con mi familia y viajar por el mundo. Me gusta leer libros y ver series de tv. Soy un entusiasta de las métricas y visualizaciones de fútbol, en especial de mi equipo Barcelona S.C.</p>
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
