--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<h2>About <strong>Me</strong></h2>
 					</div>
 					<p class="lead">I am passionate about everything that mixes technology, data, and people, and turning large data volumes into knowledge, to find business-oriented and actionable insights in a fast-changing world we are living in.</p>
-					<p class="mb-5  ">Soy un apasionado de todo lo que relacione a la tecnología, con los datos y las personas, y convertir grandes volúmenes de datos en conocimiento, en busca de insights orientados al negocio.</p>
+					<p class="mb-5  ">Soy un apasionado de todo lo que relacione la tecnología, con los datos y las personas, y convertir grandes volúmenes de datos en conocimiento, en busca de insights orientados al negocio.</p>
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
@@ -125,7 +125,7 @@
 							<span class="icon-browser2"></span>
 						</span>
 						<h3 class="mb-4">Market Research: Cuali, Cuanti & Neuromarketing</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<p>I have worked in both Quantitative and Qualitative fields, as well as Neuromarketing techniques in order to understand customers in a cross-media context and their decision making process.</p>
 						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 							<span class="icon-presentation"></span>
 						</span>
 						<h3 class="mb-4">Big Data, Data Visualization</h3>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+						<p>Demonstrated experience in Big Data Science projects with several tools/technologies such as R, SQL, Python, Tableau, D3.js, ArcGIS, HTML, CSS, JavaScript, among others.</p>
 						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
@@ -145,7 +145,7 @@
 							<span class="icon-video2"></span>
 						</span>
 						<h3 class="mb-4">Digital Analytics</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+						<p>Experience gathering, analyzing, and delivering advanced analytics from web/mobile, ecommerce, and social media through Google Analytics, Tag Manager, Data Studio, and Google Optimize (A/B testing).</p>
 						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
