--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<span class="icon-browser2"></span>
 						</span>
 						<h3 class="mb-4">Market Research: Cuali, Cuanti & Neuromarketing</h3>
-						<p>I have worked in both Quantitative and Qualitative fields, as well as Neuromarketing techniques in order to understand customers in a cross-media context and their decision making process.</p>
+						<p>Demonstrated experience in both Quantitative and Qualitative fields, as well as Neuromarketing techniques in order to understand customers in a cross-media context and their decision making process. Gather and use data from internal and external sources such as Kantar, Infoadex, Galileo, Comscore, etc.</p>
 						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 							<span class="icon-presentation"></span>
 						</span>
 						<h3 class="mb-4">Big Data, Data Visualization</h3>
-						<p>Demonstrated experience in Big Data Science projects with several tools/technologies such as R, SQL, Python, Tableau, D3.js, ArcGIS, HTML, CSS, JavaScript, among others.</p>
+						<p>Solid experience in Big Data Science projects with several tools/technologies such as R, SQL, Python, Tableau, D3.js, ArcGIS, HTML, CSS, JavaScript, among others.</p>
 						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
