--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<span class="icon">
 							<span class="icon-browser2"></span>
 						</span>
-						<h3 class="mb-4">Market Research: Cuali, Cuanti & Neuromarketing</h3>
+						<h3 class="mb-4">Market Research: Cuanti, Cuali & Neuromarketing</h3>
 						<p>Demonstrated experience in both Quantitative and Qualitative fields, as well as Neuromarketing techniques in order to understand customers in a cross-media context and their decision making process. Gather and use data from internal and external sources such as Kantar, Infoadex, Galileo, TomMicro.</p>
 						<p><a href="#section-contact" class="site-link smoothscroll" class="btn btn-primary px-4 py-2 btn-sm">Contact Me <i class="icon-chevron-right"></i></a></p>
 					</div>
